--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
     "i18next-http-backend": "^2.0.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.3"
+    "react-ripples": "^2.2.1",
+    "react-router-dom": "^6.4.3",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.188",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
